[gd_scene load_steps=7 format=3 uid="uid://cqxjrxipwoe85"]

[ext_resource type="Script" uid="uid://bb4lhsnewprdg" path="res://Enemies/Static Enemy/static_enemy.gd" id="1_6ln5t"]
[ext_resource type="PackedScene" uid="uid://ntpu8pjibyrw" path="res://Components/Health Component/health_coponent.tscn" id="2_fqhmt"]
[ext_resource type="PackedScene" uid="uid://castrtcka8x82" path="res://Components/Effect Component/effect_component.tscn" id="3_s5lhl"]
[ext_resource type="Texture2D" uid="uid://cjraxmvgw4mpd" path="res://icon.svg" id="4_s5lhl"]

[sub_resource type="SpriteFrames" id="SpriteFrames_x4lq1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_s5lhl")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s5lhl"]
size = Vector2(128, 128)

[node name="static_enemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 4
motion_mode = 1
script = ExtResource("1_6ln5t")

[node name="hpbar" type="ProgressBar" parent="."]
offset_left = -64.0
offset_top = 72.0
offset_right = 64.0
offset_bottom = 88.0
show_percentage = false

[node name="hptxt" type="RichTextLabel" parent="."]
unique_name_in_owner = true
offset_left = -128.0
offset_top = -112.0
offset_right = 128.0
offset_bottom = -48.0
theme_override_font_sizes/normal_font_size = 32
text = "100 / 100"
fit_content = true
horizontal_alignment = 1

[node name="healthCoponent" parent="." node_paths=PackedStringArray("DISPLAY_BAR") instance=ExtResource("2_fqhmt")]
unique_name_in_owner = true
DISPLAY_BAR = NodePath("../hpbar")

[node name="effectComponent" parent="." instance=ExtResource("3_s5lhl")]
unique_name_in_owner = true

[node name="sprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_x4lq1")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_s5lhl")
debug_color = Color(1, 0, 0, 0.42000002)

[node name="navAgent" type="NavigationAgent2D" parent="."]
unique_name_in_owner = true
avoidance_enabled = true
radius = 50.0
neighbor_distance = 2500.0
max_speed = 100000.0
debug_enabled = true
debug_use_custom = true
debug_path_custom_color = Color(1, 0, 0, 1)
debug_path_custom_point_size = 8.0
debug_path_custom_line_width = 2.0

[node name="aggroChange" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5
autostart = true

[node name="aggroDisp" type="RichTextLabel" parent="."]
unique_name_in_owner = true
offset_left = -256.0
offset_top = 88.0
offset_right = 256.0
offset_bottom = 358.0
theme_override_font_sizes/normal_font_size = 32
text = "Aggro: Skibidi"
fit_content = true
horizontal_alignment = 1

[connection signal="death" from="healthCoponent" to="." method="on_death"]
[connection signal="velocity_computed" from="navAgent" to="." method="_on_nav_agent_velocity_computed"]
[connection signal="timeout" from="aggroChange" to="." method="_on_aggro_change_timeout"]
